--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -4,11 +4,15 @@
   "description": "Proyecto eCommerce DigitalHouse FullStack",
   "main": "index.js",
   "scripts": {
+    "start" : "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
