--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -4,13 +4,14 @@
   "description": "Proyecto eCommerce DigitalHouse FullStack",
   "main": "index.js",
   "scripts": {
-    "start" : "nodemon app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "method-override": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
